[package]
name = "gpu-miner"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gpu-miner"
path = "src/main.rs"

[dependencies]
# Workspace deps
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Local deps
gpu-common = { path = "../common" }

# CLI enhancements
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"

[build-dependencies]
tonic-build = "0.10"
