[package]
name = "coordination"
version = "0.1.0"
edition = "2021"
authors = ["Opus GPU Team"]

[dependencies]
# Async runtime (thời gian chạy bất đồng bộ)
tokio = { version = "1.35", features = ["full"] }

# Serialization (tuần tự hóa dữ liệu)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking (mạng)
reqwest = { version = "0.11", features = ["json"] }

# Logging (ghi log)
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling (xử lý lỗi)
anyhow = "1.0"
thiserror = "1.0"

# Time utilities (tiện ích thời gian)
chrono = "0.4"

# mDNS for peer discovery (mDNS để tìm kiếm peer)
mdns-sd = "0.10"

[dev-dependencies]
tokio-test = "0.4"
